--- a/index.html
+++ b/index.html
@@ -1,9 +1,57 @@
-</html>
-<body bgcolor="green">
-<head><title>pagina inicial</title></head>
-<body>
-Hola mundo!!
-Robin Daniel Franco Castañeda 
-4to compu B
-
+<html>
+<head>
+<title>mi primer pagina web</title>
+</head>
+<body bgcolor = "blue" background="fondo.jpg">
+<center><img src ="perro.jpg" width="300" height="141" border = "2"</center>
+<font size="9" color="purple" font-family:Arial>
+<p>  <u> Curriculum vitae </u></p>
+<b><i>Robin Daniel</b></i>
+<br>
+<a name="menu"></a>
+<a href="#datos">Datos personales</a>
+<a href="#estudios">Estudios</a>
+<a href="#laboral">Experiencia Laboral</a>
+<a href="#reco">Recomendaciones</a>
+<br>
+<a name="#menu"></a>
+<a name="datos"></a>
+<hr size = "12" color = "red">
+<font size ="5" color"red" font-family:Arial>
+<p>Datos personales</p>
+<p>Nombre: Robin Daniel
+<p>Apellido: Franco Castañeda
+<p>Edad: 17 años
+<p>tell:53143579
+<p>Dirección:Terranoca 8va calle 15av
+<br>
+<a href="#menu">Regreso</a>
+<a name="estudios"></a>
+<hr size = "12" color = "black">
+<font size ="5" color"red" font-family:Arial>
+<p>  Estudios...</p>
+<p> Primaria: Colegio "Los niños"
+<p> Secundaria: instituto profesional de computación
+<p> Diversificados: Instituto profesional de computación
+<p> Universidad: ...
+<p> Cursos libres: ...
+<br>
+<a href="#menu">Regreso</a>
+<a name="laboral"></a>
+<hr size = "12" color = "cyan">
+<font size ="5" color"red" font-family:Arial>
+<p>Experiencia laboral</p>
+<p>sin experiencia Laboral</p>
+<p>sin experiencia Laboral</p>
+<br>
+<a href="#menu">Regreso</a>
+<a name="reco"></a>
+<hr size = "12" color = "cyan">
+<font size ="5" color"red" font-family:Arial>
+<p>Recomendaciones</p>
+<p>sin experiencia Laboral</p>
+<p>sin experiencia Laboral</p>
+<br>
+<a href="#menu">Regreso</a>
+</body>
 </html>
